# agentic-web-navigator

./: .env.example  .gitignore  README.md
agent/: pyproject.toml
agent/navigator/: __init__.py  actions.py  bridge.py  browser.py  captcha.py  cli.py  config.py  conversation.py  llm.py  loop.py  memory.py  perception.py  prompts.py  server.py  vault.py
agent/tests/: test_perception.py  test_vault.py
browser/: package-lock.json  package.json
browser/src/main/: bridge.js  index.js  profiles.js  startpage.js  tabs.js
browser/src/preload/: index.js
browser/src/renderer/: index.html  renderer.js  styles.css
scripts/: clear-cache.sh  start.sh
shared/: protocol.json
