[project]
name = "agentic-web-navigator"
version = "0.1.0"
description = "Autonomous web-navigation agent (GPT-4o mini) that drives a Chromium browser over CDP."
requires-python = ">=3.10"
dependencies = [
    "openai>=1.40",
    "patchright>=1.50",  # CDP-leak-free Playwright fork (anti-bot stealth)
    "playwright>=1.45",
    "websockets>=12.0",
    "keyring>=24.0",
    "pyotp>=2.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
navigator-agent = "navigator.server:run"
navigator-vault = "navigator.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["navigator*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
